--- a/src/less/wolf3d.less
+++ b/src/less/wolf3d.less
@@ -19,6 +19,9 @@ body {
 
   width : 100%;
   height : 100%;
+
+  background-color : black;
+  text-align : center;
 }
 
 .load-progress {
@@ -33,8 +36,6 @@ body {
 
 #main {
   position : absolute;
-  left : 0;
-  top : 0;
   width : 640px;
   height : 400px;
   left : 50%;
@@ -256,7 +257,7 @@ body {
   z-index : 1000;
   left : 20px;
   top : 15px;
-  font-family : courier new;
+  font-family: "Courier New", monospace;
   font-size : 16px;
   width : 70px;
   height : 16px;
@@ -408,37 +409,37 @@ body {
   height : 32px;
   background-image : url(../assets/art/intermissionfont.png);
   background-repeat : no-repeat;
-  background-position : 32px 0px;
+  background-position : 32px 0;
 }
 #game .intermission .num-0 {
-  background-position : 0px 0px;
+  background-position : 0 0;
 }
 #game .intermission .num-1 {
-  background-position : -32px 0px;
+  background-position : -32px 0;
 }
 #game .intermission .num-2 {
-  background-position : -64px 0px;
+  background-position : -64px 0;
 }
 #game .intermission .num-3 {
-  background-position : -96px 0px;
+  background-position : -96px 0;
 }
 #game .intermission .num-4 {
-  background-position : -128px 0px;
+  background-position : -128px 0;
 }
 #game .intermission .num-5 {
-  background-position : -160px 0px;
+  background-position : -160px 0;
 }
 #game .intermission .num-6 {
-  background-position : -192px 0px;
+  background-position : -192px 0;
 }
 #game .intermission .num-7 {
-  background-position : -224px 0px;
+  background-position : -224px 0;
 }
 #game .intermission .num-8 {
-  background-position : -256px 0px;
+  background-position : -256px 0;
 }
 #game .intermission .num-9 {
-  background-position : -288px 0px;
+  background-position : -288px 0;
 }
 
 #menu div.menu {
