Fixed bug with floor number

--- a/src/less/wolf3d.less
+++ b/src/less/wolf3d.less
@@ -224,8 +224,9 @@ body {
   top : 32px;
 }
 
-#game .hud .floor {
+#game .hud .floor { //TODO: conflict with floor
   left : 48px;
+  width: auto;
 }
 #game .hud .score {
   left : 96px;
